[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["API"]

[project]
name = "exchange-rate-api"
version = "0.1.0"
description = "A FastAPI-based exchange rate API that provides real-time and historical currency exchange rates"
authors = [
    { name = "sameersayani", email = "" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "httpx>=0.25.0",  # For making HTTP requests to external rate APIs
    "python-dotenv>=1.0.0",  # For environment variables
    "redis>=5.0.1",  # For caching
    "sqlalchemy>=2.0.23",  # For database operations
    "alembic>=1.12.1",  # For database migrations
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.10.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"